--- a/templates/detailed.html
+++ b/templates/detailed.html
@@ -24,5 +24,6 @@
     <form method="POST" action="/newcomment">
         <input type="text" name="comment" placeholder="Write the comment here">
         <input type="hidden" name="id" value={{message.id}}>
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         <button type="submit">Post</button>
     </form>
