--- a/templates/user.html
+++ b/templates/user.html
@@ -11,12 +11,14 @@
 <p>You are following this user.</p>
 <form method="POST" action="/unfollowuser">
     <input type="hidden" name="id" value={{page_id}}>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <button type="submit">Unfollow</button>
 </form>
 {% else %}
 <p>You are not following this user</p>
 <form method="POST" action="/followuser">
     <input type="hidden" name="id" value={{page_id}}>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <button type="submit">Follow</button>
 </form>
 {% endif %}
